# hush

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.fa.md  README.md  docker-compose.override.yml  docker-compose.yml  hush  hush.ps1  hush.sh
.claude/: README.md  RPI_WORKFLOW_PLAN.md  (+3 more)
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py  security_limits.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/middleware/: __init__.py  rate_limit.py  security.py
backend/app/models/: __init__.py  schema.sql
backend/app/routers/: __init__.py  auth.py  conversations.py  groups.py  health.py  messages.py  threads.py  websocket.py
backend/app/schemas/: __init__.py  auth.py  conversation.py  group.py  message.py  thread.py
backend/app/services/: __init__.py  authorization.py  connection_cleanup.py  defense.py  heartbeat.py  message_expiry.py  telemetry.py  websocket.py
backend/app/utils/: __init__.py  crypto.py  network.py  payload_validation.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_authorization.py  test_config_validation.py  test_conversations_router.py  test_group_authorization.py  test_group_lifecycle_integration.py  test_groups_router.py  test_health.py  test_health_router.py  test_jwt_claim_validation.py  test_message_expiry_worker.py  test_messages.py  test_payload_validation.py  test_thread_query_isolation.py  test_threads.py  test_threads_authz.py  test_websocket_authz.py
(+154 files in other folders)
